<resources>
    <string name="app_name">Github User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Type here to search user</string>
    <string name="name">Bagas Makhali</string>
    <string name="html">https://github.com/makhalibagas</string>
    <string name="username">makhalibagas</string>
    <string name="bio">never be lazy to be successful abd focus on one goal to be better</string>
    <string name="email">makhalibagas1@gmail.com</string>
    <string name="blog">makhalibagas.blogspot.com</string>
    <string name="favorite">Favorite</string>
    <string name="follows">4 Followers. 20 Following</string>
    <string name="repos">34 Repository</string>
    <string name="descRepo">this repo use java and kotlin language, Is all submission in the android fundalmental application learning class in dicoding and in the class i get a certificate</string>
    <string name="select_language">Select Language</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="author">Dibuat oleh makhalibagas</string>
    <string name="star_repository">Star Repository</string>
    <string name="search_user">Search User</string>
    <string name="not_found">Not Found</string>
    <string name="favorite_user">Favorite User</string>
    <string name="settings">Settings</string>
    <string name="aplikasi_github_user">Aplikasi-Github-User</string>
    <string name="java">Java</string>
    <string name="_10">10</string>
    <string name="updatee">Updated 2 days ago</string>
    <string name="star">Star</string>
    <string name="unstar">Unstar</string>
    <string name="unfavorite">UnFavorite</string>


</resources>
