<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimaryDark"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/nunito"
                android:text="@string/settings"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btSettings"
                android:layout_width="24dp"
                android:layout_height="24dp"
                style="?attr/borderlessButtonStyle"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="12dp"
                android:background="@drawable/ic_settings" />

        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_notifications"
            android:drawablePadding="15dp"
            android:gravity="center"
            android:text="@string/daily_reminder"/>
        <Switch
            android:id="@+id/switchDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_palette"
            android:drawablePadding="15dp"
            android:gravity="center"
            android:text="@string/dark_theme"/>
        <Switch
            android:id="@+id/switchTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>

    </FrameLayout>

    <TextView
        android:id="@+id/tvSelectLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_bahasa"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:text="@string/select_language"/>

    <TextView
        android:id="@+id/tvFavoriteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_favsetting"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:text="@string/favorite_user"/>

    <TextView
        android:id="@+id/tvStarRepository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_star_setting"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:text="@string/star_repository"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textAlignment="center"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

</LinearLayout>